# Agent-ai-by-Andrew

./: .gitignore  AI_Agent_计划书.md  README.md  SETUP.md  demo.py  main.py  pyproject.toml
agent_mcp/: __init__.py  client.py  protocols.py  server.py
benchmarks/: edge_cases.yaml  regression_suite.yaml  run_benchmark.py  test_cases.yaml
config/: __init__.py  security.py  settings.py
core/: __init__.py  agent.py  llm_client.py  prompt_manager.py
docs/: MCP_搭建与运行说明.md  SETUP.md
evaluation/: __init__.py  evaluator.py  metrics.py  reporter.py
memory/: __init__.py  conversation.py
security/: __init__.py  sanitizer.py  secrets_filter.py  validator.py
tests/: test_core_modules.py  test_mcp_modules.py
tools/: __init__.py  base_tool.py  calculator.py  data_analysis.py  file_operations.py  web_search.py
utils/: helpers.py  logger.py
webapp/: server.py  session_store.py
webapp/static/: app.js  index.html  styles.css
