[project]
name = "agent-ai"
version = "0.1.0"
description = "AI Agent 学习项目 - 基于吴恩达Agent课程实践"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.0,<2.3.0",
    "openai>=1.30.0",
    "fastmcp>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
